# Stock_Ai_Engine

./: README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/agents/: decision_agent.py  news_agent.py  portfolio_agent.py
app/analysis/: diversification_analyzer.py  portfolio_metrics_calculator.py  sector_mapper.py  sentiment_analyzer.py  stress_test_engine.py
app/api/: portfolio_api.py  scan_api.py  stock_api.py
app/data/: universe_cache.json  universe_provider_UNUSED.py
app/data/universe_providers/: gainer_provider.py
app/pipelines/: scan_pipeline.py  stock_pipeline.py
app/schemas/: stock_schema.py  trade_schema.py
app/scoring/: opportunity_scorer.py
app/tools/: fundamental_tool.py  market_data_adapter.py  market_data_tool.py
