[project]
name = "stock-ai-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "groq>=1.1.1",
    "ipykernel>=7.2.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "req>=1.0.0",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
    "yfinance>=1.2.0",
]
